# sort-const-rs-fork

./: Cargo.toml  README.md  README.tpl
examples/: large-quick.rs  large-shell.rs  simple.rs
src/: lib.rs
