[package]
name = "sort-const"
authors = ["Daniel Bloom"]
version = "1.0.1"
edition = "2021"
description = "Sort arrays and slices in const contexts."
keywords = ["const", "sort", "const-sort", "sorting"]
categories = ["algorithms", "no-std::no-alloc"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Daniel-Aaron-Bloom/sort-const-rs"
homepage = "https://docs.rs/sort-const"
documentation = "https://docs.rs/sort-const"
readme = "README.md"
rust-version = "1.85.0"

[features]
slow-tests = []

[dependencies]
arrayvec-const = { version = "0.7.7" }

[badges]
github = { repository = "Daniel-Aaron-Bloom/sort-const-rs", workflow = "Rust" }

[[example]]
name = "large-quick"
required-features = ["slow-tests"]

[[example]]
name = "large-shell"
required-features = ["slow-tests"]
